--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
-Want to chat?  Email me at ryan@ryanwaldorf.com.
+Want to chat?  Email me at <a href="mailto:ryan@ryanwaldorf.com">ryan@ryanwaldorf.com</a>.
 
-Github: https://github.com/ryanwith
+Github: <a href="https://github.com/ryanwith">https://github.com/ryanwith</a>
+LinkedIn: <a href="https://www.linkedin.com/in/ryan-waldorf/">https://www.linkedin.com/in/ryan-waldorf/</a>
